--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "@types/node": "^12.20.13",
     "@types/react": "^17.0.6",
     "@types/react-dom": "^17.0.5",
+    "@types/react-router": "^5.1.14",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "axios": "^0.21.1",
+    "bootstrap": "^5.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-placeholder": "^4.1.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "save": "^2.4.0",
+    "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
