--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
     "react-placeholder": "^4.1.0",
+    "react-query": "^3.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "save": "^2.4.0",
